--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>MyPotholes App</title>
 
   <base href="/" />
 
@@ -24,6 +24,7 @@
   <!-- Google Maps API -->
   <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyBUL7YXwGl-LfhnhWrfuPoiz0ObpPdI4Pk&v=3.exp"></script> -->
   <script src='https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBUL7YXwGl-LfhnhWrfuPoiz0ObpPdI4Pk'></script>
+   <!-- <script src='https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBUL7YXwGl-LfhnhWrfuPoiz0ObpPdI4Pk'></script> -->
 </head>
 
 <body class="mat-typography">
